--- a/src/styles.css
+++ b/src/styles.css
@@ -56,8 +56,19 @@
   margin: 1rem 0;
 }
 
+.m-1 {
+  margin: 1rem;
+}
+
 .form {
   border: 1px solid black;
   padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.search-box {
+  width: 100%;
+  text-align: center;
+  padding: 0.5rem;
   border-radius: 0.5rem;
 }
